--- a/opentext02/.classpath
+++ b/opentext02/.classpath
@@ -9,5 +9,11 @@
 	<classpathentry kind="lib" path="lib/webservices-extra.jar"/>
 	<classpathentry kind="lib" path="lib/webservices-rt.jar"/>
 	<classpathentry kind="lib" path="lib/wstx-services.war"/>
+	<classpathentry kind="lib" path="C:/Hidden/Applications/eclipse/plugins/org.apache.axis_1.4.0.v201005080400/lib/axis.jar"/>
+	<classpathentry kind="lib" path="C:/Hidden/Applications/eclipse/plugins/org.apache.commons.discovery_0.2.0.v201004190315/lib/commons-discovery-0.2.jar"/>
+	<classpathentry kind="lib" path="C:/Hidden/Applications/eclipse/plugins/javax.xml.rpc_1.1.0.v201005080400/lib/jaxrpc.jar"/>
+	<classpathentry kind="lib" path="C:/Hidden/Applications/eclipse/plugins/javax.xml.soap_1.2.0.v201005080501/lib/saaj.jar"/>
+	<classpathentry kind="lib" path="C:/Hidden/Applications/eclipse/plugins/javax.wsdl_1.6.2.v201012040545.jar"/>
+	<classpathentry kind="lib" path="C:/Hidden/Applications/eclipse/plugins/org.apache.commons.logging_1.0.4.v201101211617.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
